styles/styles.css
/*css-reset*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
    font-family: "Roboto";
    height: 100vh;
    font-size: 2rem;
}
button{
    font-size: 1.5rem;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*css-reset end*/

.top-bar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 60%;
    height: 80px;
    margin: auto;
}

.content{
    width: 100%;
    height: 100%;
    background-color: #f0f0f0;
    padding-top: 10px;
}

.bookContainer{
    display: flex;
    flex-wrap: wrap;
}

.bookCard{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    justify-content: center;
    align-content: center;
    align-items: center;
    width: 350px;
    background-color: white;
    margin: 20px;
    border-radius: 15px;
}

.bookCard > * {
    text-align: center;
}

.buttonDiv{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50%;
    margin: auto;
    margin-bottom: 20px;
}

.buttonDiv > button {
    margin-top: 20px;
}

#bookForm{
    display: none;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgb(197, 197, 197);
    padding:40px;
    border-radius: 20px;

    animation-name: fade-in;
    animation-duration:1s;
}

@keyframes fade-in {
    from {opacity: 0;}
    to {opacity: 1;}
}

.form-item{
    margin-top:10px;
}

button{   
    -webkit-border-radius: 7;
    -moz-border-radius: 7;
    border-radius: 7px;
    color: #ffffff;
    font-size: 20px;
    padding: 10px 20px 10px 20px;
    text-decoration: none;
    border: none
}


.add-btn{
    margin-left: 50%;
    margin-top: 20px;
    margin-bottom: 20px;
    background: #318500;
}
.add-btn:hover {
    background: #277500;
    text-decoration: none;
}

.remove-btn{
    background: #850000;
}
.remove-btn:hover{
    background: #610000;
}

.read-btn{
    background: #da7400;
}
.read-btn:hover{
    background: #985100;
}

.unread-btn{
    background: #eab523;
}
.unread-btn:hover{
    background: #b18919;
}

